# sdypy-sep005-compliance

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-publish.yml
docs/source/: conf.py  getting_started.rst
notebooks/: sep005_model_demo.py
sdypy_sep005/: __init__.py  sep005.py
tests/: test_sep005.py
