# // Title: pyproject.toml
# // Description: This file contains the configuration for the project.
# -- Project metadata.
[project]
name = "sdypy_sep005"
license = { file = "LICENSE" }
readme = "README.rst"
description = "Checks compability with the SDyPy SEP005 guidelines"
dynamic = ["version"]
classifiers=["Development Status :: 4 - Beta",
             "Environment :: Console",
             "Intended Audience :: Science/Research",
             "Intended Audience :: Information Technology",
             "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
             "Natural Language :: English",
             "Operating System :: POSIX :: Linux",
             "Programming Language :: Python :: 3",
             "Programming Language :: Python :: 3.9",
             "Programming Language :: Python :: 3.10",
             "Programming Language :: Python :: 3.11",
             "Programming Language :: Python :: 3.12",
             "Programming Language :: Python :: 3.13",
             "Programming Language :: Python :: 3.14"
             ]
authors = [{ name = "Wout Weijtjens", email = "wout.weijtjens@24sea.eu" }]
maintainers = [{ name = "Pietro Dantuono", email = "pietro.dantuono@24sea.eu" },
               { name = "Wout Weijtjens", email = "wout.weijtjens@24sea.eu" },
               { name = "Panagiotis Konis", email = "panagiotis.konis@24sea.eu" }]
# -- Project dependencies.
requires-python = ">=3.9.0,<3.15"
dependencies = [
    "pydantic"
]

# -- Project package.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["sdypy_sep005"]

[tool.hatch.version]
path = "./sdypy_sep005/__init__.py"
pattern = "__version__: str = \"(?P<version>[^\"]+)\""

# -- Project URLs
[project.urls]
"Homepage" = "https://github.com/sdypy"
Repository = "https://github.com/OWI-Lab/sdypy-sep005-compliance"

# -- Project optional dependencies
# [project.optional-dependencies]
# optional_group_name = ["dependency_1", "dependency_2"]

# -- Project dependency groups
[dependency-groups]
docs = ["zensical", "mkdocstrings-python"]
nb = ["notebook<7.0", "python-dotenv", "psycopg>=3.2.4", "tabulate>=0.9.0",
      "matplotlib>=3.7.1"]
ci = ["mypy==1.*", "pycln==2.4.*","black",
      "ruff==0.*", "commitizen==3.*", "pre-commit==3.*",
      "types-PyYAML", "types-pytz", "types-requests", "jupytext",
      "invoke==2.2.*"]
test = ["pytest==8.3.2", "pytest-mock==3.14.0", "hypothesis==6.111.2",
        "pytest-cov==5.0.0", "pytest-randomly==3.15.0", "types-python-dateutil",
        "hatch==1.*"]
build = ["twine==5.1.1", "build==1.2.1"]
all = [{include-group = "docs"}, {include-group = "nb"}, {include-group = "ci"},
       {include-group = "test"}, {include-group = "build"}]

# -- Project tools
# ** uv **
# uv is a tool for managing virtual environments. It is configured to use the
# same list of ignored directories as Ruff, and to exclude a variety of
# commonly ignored directories from being managed.
[tool.uv]
package = true
default-groups = ["ci", "test"]
[tool.hatch.envs.default]
installer = "uv"
# ** Hatch **
[tool.hatch.envs.hatch-test]
dependencies =[
    "coverage-enable-subprocess==1.0",
    "coverage[toml]<7.11; python_version < '3.10'",
    "coverage[toml]~=7.11; python_version >= '3.10'",
    "pytest~=8.1",
    "pytest-mock~=3.12",
    "pytest-randomly~=3.15",
    "pytest-rerunfailures~=14.0",
    "pytest-xdist[psutil]~=3.5",
    "hypothesis~=6.111.2",
]
# Modern Python: numpy/pandas come from project dependencies (pandas<3).
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.14","3.13", "3.12", "3.11", "3.10", "3.9"]

